--- a/OW.Operation/Views/Home/Index.cshtml
+++ b/OW.Operation/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
-﻿
-@{
-    Layout = null;
+﻿@{
+    Layout = "~/Views/Shared/_Template.cshtml";
 }
 
 <!DOCTYPE html>
@@ -13,150 +12,15 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="all,follow">
-
-    <link href="~/wwwroot/lib/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/wwwroot/comm/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="~/wwwroot/comm/css/fontastic.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/wwwroot/comm/css/style.default.css" id="theme-stylesheet">
+   
 </head>
 <body>
     <div class="page">
-        <!-- Main Navbar-->
-        <header class="header">
-            <nav class="navbar">
-                <!-- Search Box-->
-                <div class="search-box">
-                    <button class="dismiss"><i class="icon-close"></i></button>
-                    <form id="searchForm" action="#" role="search">
-                        <input type="search" placeholder="请输入你需要搜索的内容" class="form-control">
-                    </form>
-                </div>
-                <div class="container-fluid">
-                    <div class="navbar-holder d-flex align-items-center justify-content-between">
-                        <!-- Navbar Header-->
-                        <div class="navbar-header">
-                            <!-- Navbar Brand --><a href="index.html" class="navbar-brand d-none d-sm-inline-block">
-                                <div class="brand-text d-none d-lg-inline-block"><span>OW </span><strong>车牌管理系统</strong></div>
-                                <div class="brand-text d-none d-sm-inline-block d-lg-none"><strong>BD</strong></div>
-                            </a>
-                            <!-- Toggle Button--><a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span></a>
-                        </div>
-                        <!-- Navbar Menu -->
-                        <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
-                            <!-- Search-->
-                            <li class="nav-item d-flex align-items-center"><a id="search" href="#"><i class="icon-search"></i></a></li>
-                            <!-- Notifications-->
-                            <li class="nav-item dropdown">
-                                <a id="notifications" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link"><i class="fa fa-bell-o"></i><span class="badge bg-red badge-corner">12</span></a>
-                                <ul aria-labelledby="notifications" class="dropdown-menu">
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item">
-                                            <div class="notification">
-                                                <div class="notification-content"><i class="fa fa-envelope bg-green"></i>黄师儒衬衫跳楼大甩价...</div>
-                                                <div class="notification-time"><small>4分钟前</small></div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item">
-                                            <div class="notification">
-                                                <div class="notification-content"><i class="fa fa-twitter bg-blue"></i>你有两个粉丝</div>
-                                                <div class="notification-time"><small>4分钟前</small></div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item">
-                                            <div class="notification">
-                                                <div class="notification-content"><i class="fa fa-upload bg-orange"></i>服务器重启</div>
-                                                <div class="notification-time"><small>1小时前</small></div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item">
-                                            <div class="notification">
-                                                <div class="notification-content"><i class="fa fa-twitter bg-blue"></i>QQ有10条未读信息</div>
-                                                <div class="notification-time"><small>10分钟前</small></div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center"> <strong>查看所有全部                                       </strong></a></li>
-                                </ul>
-                            </li>
-                            <!-- Messages                        -->
-                            <li class="nav-item dropdown">
-                                <a id="messages" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link"><i class="fa fa-envelope-o"></i><span class="badge bg-orange badge-corner">10</span></a>
-                                <ul aria-labelledby="notifications" class="dropdown-menu">
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                            <div class="msg-profile"> <img src="~/wwwroot/comm/img/avatar-1.jpg" alt="..." class="img-fluid rounded-circle"></div>
-                                            <div class="msg-body">
 
-                                                <h3 class="h5">黄师儒</h3><span>发来邮件请查收</span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                            <div class="msg-profile"> <img src="~/wwwroot/comm/img/avatar-2.jpg" alt="..." class="img-fluid rounded-circle"></div>
-                                            <div class="msg-body">
-                                                <h3 class="h5">韦成</h3><span>发来邮件请查收</span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                            <div class="msg-profile"> <img src="~/wwwroot/comm/img/avatar-3.jpg" alt="..." class="img-fluid rounded-circle"></div>
-                                            <div class="msg-body">
-                                                <h3 class="h5">姚恒峰</h3><span>发来邮件请查收</span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center"> <strong>阅读所以信息</strong></a></li>
-                                </ul>
-                            </li>
-
-                            <li class="nav-item"><a href="login.html" class="nav-link logout"> <span class="d-none d-sm-inline">吴某人</span><i class="fa fa-sign-out"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
         <div class="page-content d-flex align-items-stretch">
-            <!-- Side Navbar -->
-            <nav class="side-navbar">
-                <!-- Sidebar Header-->
-                <div class="sidebar-header d-flex align-items-center">
-                    <div class="avatar"><img src="~/wwwroot/comm/img/avatar-1.jpg" alt="..." class="img-fluid rounded-circle"></div>
-                    <div class="title">
-                        <h1 class="h4">吴某人</h1>
-                        <p>欢迎使用</p>
-                    </div>
-                </div>
-                <!-- Sidebar Navidation Menus--><span class="heading">Main</span>
-                <ul class="list-unstyled">
-                    <li class="active"><a href="index.html"> <i class="icon-home"></i>首页 </a></li>
-                    <li><a href="tables.html"> <i class="icon-grid"></i>Tables </a></li>
-                    <li><a href="charts.html"> <i class="fa fa-bar-chart"></i>Charts </a></li>
-                    <li><a href="forms.html"> <i class="icon-padnote"></i>Forms </a></li>
-                    <li>
-                        <a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Example dropdown </a>
-                        <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
-                            <li><a href="#">Page</a></li>
-                            <li><a href="#">Page</a></li>
-                            <li><a href="#">Page</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="login.html"> <i class="icon-interface-windows"></i>Login page </a></li>
-                </ul><span class="heading">Extras</span>
-                <ul class="list-unstyled">
-                    <li> <a href="#"> <i class="icon-flask"></i>Demo </a></li>
-                    <li> <a href="#"> <i class="icon-screen"></i>Demo </a></li>
-                    <li> <a href="#"> <i class="icon-mail"></i>Demo </a></li>
-                    <li> <a href="#"> <i class="icon-picture"></i>Demo </a></li>
-                </ul>
-            </nav>
+            <!-- 侧边 -->
+            @Html.Partial("_sidebar")
+            <!--侧边-->
             <div class="content-inner">
                 <!-- Page Header-->
                 <header class="page-header">
@@ -242,14 +106,14 @@
                                     <div class="text"><strong>147</strong><br><small>Forwards</small></div>
                                 </div>
                             </div>
-                            <!-- Line Chart            -->
+                            <!-- 车库位置图-->
                             <div class="chart col-lg-6 col-12">
                                 <div class="line-chart bg-white d-flex align-items-center justify-content-center has-shadow">
-                                    <canvas id="lineCahrt"></canvas>
+                                    @Html.Partial("Svgdisplay")
                                 </div>
                             </div>
                             <div class="chart col-lg-3 col-12">
-                                <!-- Bar Chart   -->
+                                <!-- 车库位置图  -->
                                 <div class="bar-chart has-shadow bg-white">
                                     <div class="title"><strong class="text-violet">95%</strong><br><small>当前系统正常运行时间</small></div>
                                     <canvas id="barChartHome"></canvas>
@@ -349,12 +213,5 @@
             </div>
         </div>
     </div>
-    <script src="~/wwwroot/comm/js/jquery.min.js"></script>
-    <script src="~/wwwroot/comm/js/popper.min.js"></script>
-    <script src="~/wwwroot/lib/js/bootstrap.min.js"></script>
-    <script src="~/wwwroot/comm/js/jquery.cookie.js"></script>
-    <script src="~/wwwroot/comm/js/Chart.min.js"></script>
-    <script src="~/wwwroot/comm/js/jquery.validate.min.js"></script>
-    <script src="~/wwwroot/comm/js/front.js"></script>
 </body>
 </html>
