--- a/OW.Operation/Views/Home/Index.cshtml
+++ b/OW.Operation/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    ViewBag.Title = "OW车辆管理系统";
     Layout = "~/Views/Shared/_Template.cshtml";
 }
 
@@ -114,9 +115,11 @@
                             </div>
                             <div class="chart col-lg-3 col-12">
                                 <!-- 车库位置图  -->
-                                <div class="bar-chart has-shadow bg-white">
+                                <div class="bar-chart has-shadow bg-white" style="position:relative;">
                                     <div class="title"><strong class="text-violet">95%</strong><br><small>当前系统正常运行时间</small></div>
-                                    <canvas id="barChartHome"></canvas>
+                                    <div id="system" class="system" style="width:100%;height:100%;">
+
+                                    </div>
                                 </div>
                                 <!-- Numbers-->
                                 <div class="statistic d-flex align-items-center bg-white has-shadow">
@@ -213,5 +216,31 @@
             </div>
         </div>
     </div>
+    <script src="~/wwwroot/comm/echarts.js"></script>
+    <script>
+         var myChart = echarts.init(document.getElementById('system'));
+    // 指定图表的配置项和数据
+        var option = {
+            title: {
+                text: 'OW收入统计'
+            },
+            tooltip: {},
+            legend: {
+                data:['月份']
+            },
+            xAxis: {
+                data: ["一月","二月","三月","四月","五月","六月","七月"]
+            },
+            yAxis: {},
+            series: [{
+                name: '收入',
+                type: 'bar',
+                data: [5, 20, 36, 10, 10, 20]
+            }]
+        };
+
+        // 使用刚指定的配置项和数据显示图表。
+        myChart.setOption(option);
+    </script>
 </body>
 </html>
