--- a/OW.Operation/Views/Home/login.cshtml
+++ b/OW.Operation/Views/Home/login.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "register";
+    ViewBag.Title = "登录";
     Layout = "~/Views/Shared/_Getinto.cshtml";
 }
 <meta charset="utf-8">
@@ -29,13 +29,13 @@
                             <div class="content">
                                 <form method="post" class="form-validate">
                                     <div class="form-group">
-                                        <input id="login-username" type="text" name="loginUsername" required data-msg="Please enter your username" class="input-material">
+                                        <input id="login-username" type="text" name="loginUsername" required data-msg="请输入用户名" class="input-material">
                                         <label for="login-username" class="label-material">用户名</label>
                                     </div>
                                     <div class="form-group">
-                                        <input id="login-password" type="password" name="loginPassword" required data-msg="Please enter your password" class="input-material">
+                                        <input id="login-password" type="password" name="loginPassword" required data-msg="请输入密码" class="input-material">
                                         <label for="login-password" class="label-material">密码</label>
-                                    </div><a id="login" href="../Home/index" class="btn btn-primary">登录</a>
+                                    </div><button id="login" class="btn btn-primary">登录</button>
 
                                 </form><a href="../Home/register" class="forgot-pass">新用户注册</a><br><small>如果忘记密码了？</small><a href="#" class="signup">请点击</a>
                                 <br />
@@ -50,7 +50,7 @@
         </div>
         <div class="copyrights text-center">
             <p>
-                ow车牌管理系统 <a href="https://app.aikezo.com" class="external">我们的团队</a>
+                ow车牌管理系统 <a href="https://app.aikezc.com" class="external">我们的团队</a>
             </p>
         </div>
     </div>
