--- a/OW.Operation/Views/Home/register.cshtml
+++ b/OW.Operation/Views/Home/register.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "register";
+    ViewBag.Title = "注册";
     Layout = "~/Views/Shared/_Getinto.cshtml";
 }
 <!--注册页面-->
@@ -25,23 +25,23 @@
                             <div class="content">
                                 <form class="form-validate">
                                     <div class="form-group">
-                                        <input id="register-username" type="text" name="registerUsername" required data-msg="Please enter your username" class="input-material">
+                                        <input id="register-username" type="text" name="registerUsername" required data-msg="请输入用户名" class="input-material">
                                         <label for="register-username" class="label-material">用户名</label>
                                     </div>
                                     <div class="form-group">
-                                        <input id="register-email" type="email" name="registerEmail" required data-msg="Please enter a valid email address" class="input-material">
-                                        <label for="register-email" class="label-material">电子邮箱/手机号</label>
+                                        <input id="register-text" type="text" name="registerEmail" required data-msg="请输入邮箱地址/手机号码" class="input-material">
+                                        <label for="register-text" class="label-material">电子邮箱/手机号</label>
                                     </div>
                                     <div class="form-group">
-                                        <input id="register-password" type="password" name="registerPassword" required data-msg="Please enter your password" class="input-material">
+                                        <input id="register-password" type="password" name="registerPassword" required data-msg="请输入密码" class="input-material">
                                         <label for="register-password" class="label-material">密码</label>
                                     </div>
                                     <div class="form-group terms-conditions">
-                                        <input id="register-agree" name="registerAgree" type="checkbox" required value="1" data-msg="Your agreement is required" class="checkbox-template">
+                                        <input id="register-agree" name="registerAgree" type="checkbox" required value="1" data-msg="确认协议" class="checkbox-template">
                                         <label for="register-agree">同意条款和政策<a href="#">《OW车牌管理协议》</a></label>
                                     </div>
                                     <div class="form-group">
-                                        <button id="regidter" type="submit" name="registerSubmit" class="btn btn-primary">注册</button>
+                                        <button id="regidter" type="button" name="registerSubmit" class="btn btn-primary">注册</button>
                                     </div>
                                 </form><small>已经有账户？</small><a href="../Home/login" class="signup">登录</a>
                             </div>
@@ -52,7 +52,7 @@
         </div>
         <div class="copyrights text-center">
             <p>
-                OW车牌管理系统 <a href="https://app.aikezo.com" class="external">我们的团队</a>
+                OW车牌管理系统 <a href="https://app.aikezc.com" class="external">我们的团队</a>
             </p>
         </div>
     </div>
