--- a/OW.Operation/Views/Home/Statistics.cshtml
+++ b/OW.Operation/Views/Home/Statistics.cshtml
@@ -1,53 +1,205 @@
 ﻿@{
     Layout = "~/Views/Shared/_Template.cshtml";
 }
-<div class="page">
-    <div class="page-content d-flex align-items-stretch">
-        <!-- 侧边 -->
-        @Html.Partial("_sidebar")
-        <!--侧边-->
-        <div class="content-inner">
-            <!-- Page Header-->
-            <header class="page-header">
-                <div class="container-fluid">
-                    <h2 class="no-margin-bottom">收入统计</h2>
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Bootstrap Material Admin by Bootstrapious.com</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="robots" content="all,follow">
+    <script src="~/wwwroot/comm/echarts.js"></script>
+    <style>
+        element.style{
+            width:100%;
+            height:100%;
+        }
+  
+    </style>
+</head>
+<body>
+    @{
+        Layout = "~/Views/Shared/_Template.cshtml";
+    }
+    <div class="page">
+        <div class="page-content d-flex align-items-stretch">
+            <!-- 侧边 -->
+            @Html.Partial("_sidebar")
+            <!--侧边-->
+            <div class="content-inner">      
+                <header class="page-header">
+                    <div class="container-fluid">
+                        <h2 class="no-margin-bottom">充值车辆</h2>
+                    </div>
+                </header>
+                <div class="breadcrumb-holder container-fluid">
+                    <ul class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item active">Tables            </li>
+                    </ul>
                 </div>
-            </header>
+                <section class="tables">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="card">
+                                    <div class="card-close">
+                                        <div class="dropdown">
+                                            <button type="button" id="closeCard1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-ellipsis-v"></i></button>
+                                            <div aria-labelledby="closeCard1" class="dropdown-menu dropdown-menu-right has-shadow"><a href="#" class="dropdown-item remove"> <i class="fa fa-times"></i>Close</a><a href="#" class="dropdown-item edit"> <i class="fa fa-gear"></i>Edit</a></div>
+                                        </div>
+                                    </div>
+                                    <div class="card-header d-flex align-items-center">
+                                        <h3 class="h4">日收入统计图</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="table-responsive">    
+                                            <div id="system"style="width:99%;height:300px"></div>
+                                            <script>
+                                                var myChart = echarts.init(document.getElementById('system'));
+                                                option = {
+                                                   
+                                                    xAxis: {
+                                                        type: 'category',
+                                                        data: ['0', '3', '6', '9', '12', '15', '18', '21', '24']
+                                                    },
+                                                    yAxis: {
+                                                        type: 'value'
+                                                    },
+                                                    series: [{
+                                                        data: [100, 110, 120, 130, 100, 133, 90, 180, 70],
+                                                        type: 'line'
+                                                    }]
+                                                };
+                                                myChart.setOption(option);
+                                            </script>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="card">
+                                    <div class="card-close">
+                                        <div class="dropdown">
+                                            <button type="button" id="closeCard2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-ellipsis-v"></i></button>
+                                            <div aria-labelledby="closeCard2" class="dropdown-menu dropdown-menu-right has-shadow"><a href="#" class="dropdown-item remove"> <i class="fa fa-times"></i>Close</a><a href="#" class="dropdown-item edit"> <i class="fa fa-gear"></i>Edit</a></div>
+                                        </div>
+                                    </div>
+                                    <div class="card-header d-flex align-items-center">
+                                        <h3 class="h4">月收入统计图</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="table-responsive">
+                                            <div id="system1" style="width:99%;height:300px"></div>
+                                            <script>
+                                                var myChart = echarts.init(document.getElementById('system1'));
+                                                option = {
 
-            <div id="incomeCharts" class="incomeCharts" style="width: 600px;height:400px;">
-                
+                                                    xAxis: {
+                                                        type: 'category',
+                                                        data: ['0', '3', '6', '9', '12', '15', '18', '21', '24']
+                                                    },
+                                                    yAxis: {
+                                                        type: 'value'
+                                                    },
+                                                    series: [{
+                                                        data: [100, 110, 120, 130, 100, 133, 90, 180, 70],
+                                                        type: 'line'
+                                                    }]
+                                                  
+                                                };
+                                                myChart.setOption(option);
+                                              
+                                            </script>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="card">
+                                    <div class="card-close">
+                                        <div class="dropdown">
+                                            <button type="button" id="closeCard3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-ellipsis-v"></i></button>
+                                            <div aria-labelledby="closeCard3" class="dropdown-menu dropdown-menu-right has-shadow"><a href="#" class="dropdown-item remove"> <i class="fa fa-times"></i>Close</a><a href="#" class="dropdown-item edit"> <i class="fa fa-gear"></i>Edit</a></div>
+                                        </div>
+                                    </div>
+                                    <div class="card-header d-flex align-items-center">
+                                        <h3 class="h4">年收入统计图</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="table-responsive">
+                                            <div id="system2" style="width:99%;height:300px"></div>
+                                            <script>
+                                                var myChart = echarts.init(document.getElementById('system2'));
+                                                option = {
+
+                                                    xAxis: {
+                                                        type: 'category',
+                                                        data: ['0', '3', '6', '9', '12', '15', '18', '21', '24']
+                                                    },
+                                                    yAxis: {
+                                                        type: 'value'
+                                                    },
+                                                    series: [{
+                                                        data: [100, 110, 120, 130, 100, 133, 90, 180, 70],
+                                                        type: 'line'
+                                                    }]
+
+                                                };
+                                                myChart.setOption(option);
+
+                                            </script>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="card">
+                                    <div class="card-close">
+                                        <div class="dropdown">
+                                            <button type="button" id="closeCard4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-ellipsis-v"></i></button>
+                                            <div aria-labelledby="closeCard4" class="dropdown-menu dropdown-menu-right has-shadow"><a href="#" class="dropdown-item remove"> <i class="fa fa-times"></i>Close</a><a href="#" class="dropdown-item edit"> <i class="fa fa-gear"></i>Edit</a></div>
+                                        </div>
+                                    </div>
+                                    <div class="card-header d-flex align-items-center">
+                                        <h3 class="h4">Compact Table</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="table-responsive">
+                                            <div id="system3" style="width:99%;height:300px"></div>
+                                            <script>
+                                                var myChart = echarts.init(document.getElementById('system3'));
+                                                option = {
+
+                                                    xAxis: {
+                                                        type: 'category',
+                                                        data: ['0', '3', '6', '9', '12', '15', '18', '21', '24']
+                                                    },
+                                                    yAxis: {
+                                                        type: 'value'
+                                                    },
+                                                    series: [{
+                                                        data: [100, 110, 120, 130, 100, 133, 90, 180, 70],
+                                                        type: 'line'
+                                                    }]
+
+                                                };
+                                                myChart.setOption(option);
+
+                                            </script>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>             
             </div>
-
-
         </div>
     </div>
-</div>
 
-<script src="~/wwwroot/comm/echarts.js"></script>
-<script>
-    var myChart = echarts.init(document.getElementById('incomeCharts'));
-    // 指定图表的配置项和数据
-        var option = {
-            title: {
-                text: 'OW收入统计'
-            },
-            tooltip: {},
-            legend: {
-                data:['月份']
-            },
-            xAxis: {
-                data: ["一月","二月","三月","四月","五月","六月","七月"]
-            },
-            yAxis: {},
-            series: [{
-                name: '收入',
-                type: 'bar',
-                data: [5, 20, 36, 10, 10, 20]
-            }]
-        };
-
-        // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
-
-</script>
+</body>
+</html>
