--- a/OW.Operation/Views/Shared/_Getinto.cshtml
+++ b/OW.Operation/Views/Shared/_Getinto.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
     <link href="~/wwwroot/comm/css/style.default.css" rel="stylesheet" id="theme-stylesheet" />
     <link href="~/wwwroot/comm/css/custom.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="~/wwwroot/comm/img/favicon.ico">
+    <link href="~/wwwroot/msg/message.css" rel="stylesheet" />
 </head>
 <body>
     <div>
@@ -25,3 +25,4 @@
 <script src="~/wwwroot/comm/js/Chart.min.js"></script>
 <script src="~/wwwroot/comm/js/jquery.validate.min.js"></script>
 <script src="~/wwwroot/comm/js/front.js"></script>
+<script src="/wwwroot/msg/message.js"></script>
