--- a/OW.Operation/Views/Shared/_Template.cshtml
+++ b/OW.Operation/Views/Shared/_Template.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
-
+@using OW.Operation.OW.Model
+@{ UserInfo info = Session["user"] as UserInfo;}
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -108,7 +109,7 @@
                             </ul>
                         </li>
 
-                        <li class="nav-item"><a href="../Home/login" class="nav-link logout"> <span class="d-none d-sm-inline">吴某人</span><i class="fa fa-sign-out"></i></a></li>
+                        <li class="nav-item"><a href="../Home/login" class="nav-link logout"> <span class="d-none d-sm-inline">@info.UserName</span><i class="fa fa-sign-out"></i></a></li>
                     </ul>
                 </div>
             </div>
