--- a/OW.Operation/Views/Home/Recharge.cshtml
+++ b/OW.Operation/Views/Home/Recharge.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     Layout = "~/Views/Shared/_Template.cshtml";
 }
+
+@using OW.Operation.OW.Model
 <div class="page">
     <div class="page-content d-flex align-items-stretch">
         <!-- 侧边 -->
@@ -69,63 +71,23 @@
                             <a href="#" data-toggle="modal" data-target="#myModal">删除</a>
                         </td>
                     </tr>
-                    <tr>
 
-                        <td>2</td>
-                        <td>黄毛</td>
-                        <td>女</td>
-                        <td>1234564654864864864</td>
-                        <td>12345678910</td>
-                        <td>奇瑞QQ</td>
-                        <td>桂A·778885</td>
-                        <td>2020年7月5日</td>
-                        <td>
-                            <a href="#" data-toggle="modal" data-target="#myModal">删除</a>
-                        </td>
-                    </tr>
-                    <tr>
+                    @foreach (CarsInfo item in ViewBag.ccar)
+                    {
+                        <tr>
+                            <td>@item.CarID</td>
+                            <td>@item.UserName</td>
+                            <td>@item.UserSex</td>
+                            <td>@item.Usersfz</td>
+                            <td>@item.UserPhone</td>
+                            <td>@item.Brand</td>
+                            <td>@item.License</td>
+                            <td>
+                                <a href="#" data-toggle="modal" data-target="#myModal">删除</a>
+                            </td>
+                        </tr>
+                    }
 
-                        <td>3</td>
-                        <td>黄毛</td>
-                        <td>女</td>
-                        <td>1234564654864864864</td>
-                        <td>12345678910</td>
-                        <td>奇瑞QQ</td>
-                        <td>桂A·778885</td>
-                        <td>2020年7月5日</td>
-                        <td>
-                            <a href="#" data-toggle="modal" data-target="#myModal">删除</a>
-                        </td>
-                    </tr>
-                    <tr>
-
-                        <td>4</td>
-                        <td>黄毛</td>
-                        <td>女</td>
-                        <td>1234564654864864864</td>
-                        <td>12345678910</td>
-                        <td>奇瑞QQ</td>
-                        <td>桂A·778885</td>
-                        <td>2020年7月5日</td>
-                        <td>
-                            <a href="#" data-toggle="modal" data-target="#myModal">删除</a>
-                        </td>
-                    </tr>
-                    <tr>
-
-                        <td>5</td>
-                        <td>黄毛</td>
-                        <td>女</td>
-                        <td>1234564654864864864</td>
-                        <td>12345678910</td>
-                        <td>奇瑞QQ</td>
-                        <td>桂A·778885</td>
-                        <td>2020年7月5日</td>
-                        <td>
-                            <a href="#" data-toggle="modal" data-target="#myModal">删除</a>
-
-                        </td>
-                    </tr>
                 </table>
             </div>
             <!-- 弹窗删除 -->
