--- a/OW.Operation/Views/Shared/_sidebar.cshtml
+++ b/OW.Operation/Views/Shared/_sidebar.cshtml
@@ -5,8 +5,8 @@
     <div class="sidebar-header d-flex align-items-center">
         <div class="avatar"><img src="~/wwwroot/comm/img/avatar-1.jpg" alt="..." class="img-fluid rounded-circle"></div>
         <div class="title">
-            @{ UserInfo info = Session["user"] as UserInfo;}
-            <h1 class="h4">@info.UserName</h1>
+            @{ AdminInfo info = Session["user"] as AdminInfo;}
+            <h1 class="h4">@info.AdminName</h1>
             <p>欢迎使用OW管理系统</p>
         </div>
     </div>
@@ -19,7 +19,7 @@
             <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
                 <li><a href="../Home/Member">会员车辆</a></li>
                 <li><a href="../Home/Recharge">充值车辆</a></li>
-                <li><a href="../Home/Foreign">外来车辆</a></li>y
+                <li><a href="../Home/Foreign">外来车辆</a></li>
             </ul>
         </li>
 
