--- a/OW.Operation/Views/Home/Foreign.cshtml
+++ b/OW.Operation/Views/Home/Foreign.cshtml
@@ -17,7 +17,7 @@
             </header>
             <div class="col-lg-6" style="padding:10px;">
                 <div class="input-group">
-                   
+
                     <input type="text" class="form-control" placeholder="请输入查找内容">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button" style="background-color:#796AEE;">Go!</button>
@@ -30,7 +30,18 @@
                         <th>
                             编号
                         </th>
-
+                        <th>
+                            姓名
+                        </th>
+                        <th>
+                            性别
+                        </th>
+                        <th>
+                            身份证
+                        </th>
+                        <th>
+                            电话
+                        </th>
                         <th>
                             车型
                         </th>
@@ -52,15 +63,110 @@
                             <td>@item.Brand</td>
                             <td>@item.License</td>
                             <td>
-                                <a href="#" data-toggle="modal" data-target="#myModal">删除</a>
+                                <a href="#" class="GetID" data-toggle="modal" data-target="#myModal">删除</a>
                             </td>
                         </tr>
                     }
                 </table>
             </div>
+            <div id="page" class="page_div" style="width:800px;height:50px;margin:0 auto;"></div>
+
+            <!-- 弹窗删除 -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            @*<h4 class="modal-title" id="myModalLabel">Modal title</h4>*@
+                        </div>
+                        <div class="modal-body">
+                            <span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>您确认要删除本条信息吗？
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消删除</button>
+                            <button type="button" id="deleteCar" class="btn btn-primary">确认删除</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 弹窗删除 -->
+
         </div>
     </div>
 </div>
+
+<script src="~/wwwroot/comm/jquery-3.3.1.js"></script>
+<script src="~/wwwroot/pageSplit/pageMe.js"></script>
+<script>
+    $(function () {
+        $(".GetID").click(function () {
+            var id = $(this).parents("tr").children("td").eq(0).text();
+            $.ajax({
+                url: "/Home/GetID",
+                type: "get",
+                data: { "id": id },
+                success: function (data) {
+
+                },
+                error: function (error) {
+
+                }
+            });
+        });
+
+
+        $("#deleteCar").click(function () {
+            $.ajax({
+                url: "/Home/DeleteCar",
+                type: "get",
+                data: {},
+                success: function (data) {
+                    if (typeof data == "string") data = $.parseJSON(data);
+                    if (data.status == 1) {
+                        $.message({
+                            message: '删除成功',
+                            type: 'success'
+                        });
+
+                        setTimeout(function () {
+                            location.href = "../Home/Foreign";
+                        }, 2000);
+                    }
+
+                    else {
+
+                        $.message({
+                            message: data.message,
+                            type: "error"
+                        })
+
+                    }
+                },
+                error: function (error) {
+                    $.message({
+                        message: "网络请求失败！",
+                        type: "error"
+                    })
+                }
+            });
+
+        });
+
+    });
+</script>
+
+<script type="text/javascript">
+    $("#page").paging({
+        pageNum: @ViewBag.currentPage, // 当前页面
+        totalNum: @ViewBag.totalPage, // 总页码
+        totalList: @ViewBag.total, // 记录总数量
+        callback: function (num) { //回调函数
+            console.log(num);
+            //alert(num);
+            location.href = '../Home/Foreign?page=' + num;
+        }
+    });
+</script>
 
 
 
