--- a/OW.Operation/Views/Home/Index.cshtml
+++ b/OW.Operation/Views/Home/Index.cshtml
@@ -233,22 +233,7 @@
     <script src="~/wwwroot/comm/echarts.js"></script>
     <script>       
         var myChart = echarts.init(document.getElementById('system'));
-        option = {
-            title: {
-                text: '日收入统计图'
-            },
-            xAxis: {
-                type: 'category',
-                data: ['0', '3', '6', '9', '12', '15', '18', '21', '24']
-            },
-            yAxis: {
-                type: 'value'
-            },
-            series: [{
-                data: [100, 110, 120, 130, 100, 133, 90,180,70],
-                type: 'line'
-            }]
-        };
+        option =@Html.Raw(Session["option"]);
         myChart.setOption(option);
     </script>
 </body>
