--- a/OW.Operation/Views/Shared/_Template.cshtml
+++ b/OW.Operation/Views/Shared/_Template.cshtml
@@ -1,6 +1,4 @@
 ﻿<!DOCTYPE html>
-@using OW.Operation.OW.Model
-@{ AdminInfo info = Session["user"] as AdminInfo;}
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -13,6 +11,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
     <link rel="stylesheet" href="~/wwwroot/comm/css/style.default.css" id="theme-stylesheet">
     <link href="~/wwwroot/comm/css/custom.css" rel="stylesheet" />
+    <link href="~/wwwroot/msg/message.css" rel="stylesheet" />
+    <link href="~/wwwroot/pageSplit/page.css" rel="stylesheet" />
     <!-- Main Navbar-->
     <header class="header">
         <nav class="navbar">
@@ -109,7 +109,7 @@
                             </ul>
                         </li>
 
-                        <li class="nav-item"><a href="../Home/login" class="nav-link logout"> <span class="d-none d-sm-inline">@info.AdminName</span><i class="fa fa-sign-out"></i></a></li>
+                        <li class="nav-item"><a href="../Home/login" class="nav-link logout"> <span class="d-none d-sm-inline">@Session["Username"]</span><i class="fa fa-sign-out"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -125,6 +125,8 @@
     <script src="~/wwwroot/comm/js/Chart.min.js"></script>
     <script src="~/wwwroot/comm/js/jquery.validate.min.js"></script>
     <script src="~/wwwroot/comm/js/front.js"></script>
+    <script src="~/wwwroot/msg/message.js"></script>
+    <script src="~/wwwroot/pageSplit/pageMe.js"></script>
 </body>
 
 </html>
